--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mini App Challenge 1</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="app"></div>
