met bare min reqs, completed live/cache toggle switch

--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -1,2 +1,22 @@
+<!doctype html>
 
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+
+    <title>BTC Tracker</title>
+    <meta name="description" content="BTC Price Tracker">
+    <meta name="author" content="SitePoint">
+
+    <link rel="stylesheet" href="styles.css">
+
+  </head>
+  <body>
+      <div id="app"></div>
+      <canvas id="myChart" max-width="300" max-height="200"></canvas>
+      <div class="coindesk">Powered by CoinDesk</div>
+      <script src="main.js"></script>
+      <!-- <script src="myChart.js"></script> -->
+  </body>
+</html>
 
