--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,19 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
 
+    <title>BTC Tracker</title>
+    <meta name="description" content="Bowling Game">
+    <meta name="author" content="DanJFox86">
+
+    <link rel="stylesheet" href="styles.css">
+
+  </head>
+  <body>
+      <div id="app">Page will render momentarily</div>
+      <script src="main.js"></script>
+      <!-- <script src="myChart.js"></script> -->
+  </body>
+</html>
 
