added scoreboard, styled pins a little bit

--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>BTC Tracker</title>
+    <title>We Bowlin'</title>
     <meta name="description" content="Bowling Game">
     <meta name="author" content="DanJFox86">
 
@@ -13,6 +13,7 @@
   <body>
       <div id="app">Page will render momentarily</div>
       <script src="main.js"></script>
+      <img src="bowlin.gif"/>
       <!-- <script src="myChart.js"></script> -->
   </body>
 </html>
